<resources>

    <string name="app_name" translatable="false">Sample Application</string>
    <string name="monitoring_title" translatable="false">Monitoring</string>
    <string name="messaging_title" translatable="false">Messaging</string>
    <string name="initializing" translatable="false">Initializing…</string>
    <string name="open_fragment" translatable="false">Open Fragment</string>
    <string name="open_activity" translatable="false">Open Activity</string>

    <string-array name="message_receive_text">
        <item>"Sent"</item>
        <item>"Delivered"</item>
        <item>"Read"</item>
        <item>"Not delivered"</item>
        <item>"Sending"</item>
    </string-array>

    <string-array name="supported_auth_types">
        <item>Authenticated</item>
        <item>Unauthenticated</item>
        <item>Sign Up(Deprecated since July 2019)</item>
    </string-array>

    <!-- <string name="lp_date_time_format">mm/dd/yyyy HH:mm</string>-->
    <string name="lp_date_time_format" translatable="false" />
    <string name="lp_date_format" translatable="false" />
    <string name="lp_time_format" translatable="false" />
    <string name="lp_ttr_message_off_hours_time_zone_id" translatable="false" />

    <string name="logout_failed" translatable="false">Logout Failed!</string>

    <string name="notification_permission_dialog_title" translatable="false">Push Notifications</string>
    <string name="notification_permission_dialog_message" translatable="false">Go to settings to allow app to receive notifications?</string>

    <string name="title_dynamic_welcome_message">Dynamic Welcome Message</string>
    <string name="hint_welcome_message">Welcome Message</string>
    <string name="hint_quick_reply_actions">Quick Reply actions</string>
    <string name="hint_option_text">Option text</string>
    <string name="hint_timeout">Timeout</string>
    <string name="heading_welcome_message_frequency">Welcome Message frequency</string>
    <string name="text_first_conversation_option">First conversation</string>
    <string name="text_every_conversation_option">Every conversation</string>
    <string name="text_action_apply">Apply</string>
    <string name="title_action_set_welcome_message">Set welcome message</string>
    <string name="toast_message_max_options_quanity">Maximum of message options quantity was reached.</string>

    <string name="heading_welcome_message_option_style">Option Style</string>
    <string name="text_contains_style">Option Style</string>
    <string name="hint_option_text_color">Text color</string>
    <string name="hint_option_border_color">Border color</string>
    <string name="hint_option_background_color">Background color</string>
    <string name="heading_border_radius">Border radius</string>
    <string name="heading_text_style">Text style</string>
    <string name="text_style_bold">Bold</string>
    <string name="text_style_italic">Italic</string>
    <string name="heading_appearance_settings">Appearance settings</string>
    <string name="heading_option_style">Option style</string>
    <string name="text_attach_style">Attach style</string>

    <string name="text_generate_pkce" translatable="false">Generate PKCE</string>
    <string name="pkce_enable" translatable="false">Enable PKCE</string>
    <string name="enable_stepup_authen">Enable StepUp Authen</string>
    <string name="enable_offline_messaging">Enable Offline Messaging</string>

</resources>
