<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_24"
        android:paddingEnd="@dimen/padding_24">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:paddingStart="@dimen/padding_4"
            android:paddingEnd="@dimen/padding_4"
            android:text="@string/title_dynamic_welcome_message"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/welcome_message_content_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/welcome_message_content_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/quick_reply_option_edit_text"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/hint_welcome_message" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:paddingStart="@dimen/margin_4"
            android:paddingEnd="@dimen/margin_4"
            android:maxLines="1"
            android:text="@string/hint_quick_reply_actions" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/quick_replies_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quick_reply_option_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nextFocusDown="@id/timeout_edit_text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/hint_option_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/add_qr_option_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:src="@drawable/ic_add"
                android:backgroundTint="@color/colorPrimary"
                app:tint="@android:color/black" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeout_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/wm_frequency_group"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/hint_timeout"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:paddingStart="@dimen/padding_4"
            android:paddingEnd="@dimen/padding_4"
            android:text="@string/heading_welcome_message_frequency" />

        <RadioGroup
            android:id="@+id/wm_frequency_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/first_conversation_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_first_conversation_option" />

            <RadioButton
                android:id="@+id/every_conversation_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_every_conversation_option" />

        </RadioGroup>

        <Button
            android:id="@+id/apply_changes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/text_action_apply" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>